<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <EditText
        android:id="@+id/TextConstrasenaR"
        android:layout_width="203dp"
        android:layout_height="41dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/TextNombreR"
        tools:text="****" tools:targetApi="o"/>

    <EditText
        android:id="@+id/TextNombreR"
        android:layout_width="209dp"
        android:layout_height="42dp"
        android:layout_marginTop="88dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/app_name"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" tools:targetApi="o"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="105dp"
        android:layout_height="41dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="88dp"
        android:text="@string/nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="64dp"
        android:text="@string/contrase_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="158dp"
        android:layout_height="40dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="37dp"
        android:onClick="OnClick"
        android:text="@string/aceptar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextConstrasenaR" />

    <Button
        android:id="@+id/bntCancelar"
        android:layout_width="158dp"
        android:layout_height="40dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="20dp"
        android:onClick="OnClick"
        android:text="@string/cancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrar" />
</androidx.constraintlayout.widget.ConstraintLayout>