<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_IniciarSesion"
        android:layout_width="141dp"
        android:layout_height="52dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="64dp"
        android:onClick="OnClick"
        android:text="@string/iniciar_sesi_n"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="208dp"
        android:layout_height="114dp"
        android:layout_marginTop="104dp"
        android:text="@string/bienvenido_a_metapp"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Registrarse"
        android:layout_width="141dp"
        android:layout_height="52dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="80dp"
        android:onClick="OnClick"
        android:text="@string/registrarse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_IniciarSesion" />

</androidx.constraintlayout.widget.ConstraintLayout>