<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarSesion">

    <EditText
        android:id="@+id/TextConstraseña"
        android:layout_width="203dp"
        android:layout_height="41dp"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/TextNombre" />

    <EditText
        android:id="@+id/TextNombre"
        android:layout_width="209dp"
        android:layout_height="42dp"
        android:layout_marginTop="88dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="105dp"
        android:layout_height="41dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="88dp"
        android:text="@string/nombre"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="64dp"
        android:text="@string/contrase_a"
        android:textColor="#0E0000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnInicar"
        android:layout_width="158dp"
        android:layout_height="40dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="48dp"
        android:onClick="OnClick"
        android:text="@string/aceptar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextConstraseña" />

    <Button
        android:id="@+id/bntCancelar"
        android:layout_width="158dp"
        android:layout_height="40dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="44dp"
        android:onClick="OnClick"
        android:text="@string/cancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInicar" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="261dp"
        android:layout_height="34dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:text="Inicio de Sesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>